force-app/main/default/objects/Power_Automate_Run_History__c/Power_Automate_Run_History__c.object-meta.xml
<CustomObject>
    <description>Trigger and Track Microsoft Power Automate flows</description>
    <label>Power Automate Run History</label>
    <nameField>
        <displayFormat>PARH-{YYYY}-{00000}</displayFormat>
        <label>Power Automate Run History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Power Automate Run Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>