force-app/main/default/objects/Power_Automate_Run_History__c/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donation</label>
    <referenceTo>Donation__c</referenceTo>
    <relationshipLabel>Power Automate Run Histories</relationshipLabel>
    <relationshipName>Power_Automate_Run_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>