force-app/main/default/objects/Power_Automate_Run_History__c/fields/Flow_Id__c.field-meta.xml
<CustomField>
    <fullName>Flow_Id__c</fullName>
    <label>Flow Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>